--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.poetry]
 name = "syslogserver_to_cloudwatch"
 version = "0.1.0"
-description = ""
+description = "SysLog server that sends LogEvents to AWS Cloudwatch"
 authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-boto3 = "^1.34.102"
+python = "^3.11"
+boto3 = ">=1.34"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
-boto3-stubs = "^1.34.102"
+boto3-stubs = ">=1.34"
 flake8 = "*"
 isort = "*"
 
