--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "SysLog server that sends LogEvents to AWS Cloudwatch"
 authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/bulv1ne/syslogserver_to_cloudwatch"
+include = ["CHANGELOG.md"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
